Add Stock API with CRUD operations and update project structure

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=stocks;User Id=sa;Password=$ecret@58;Encrypt=False;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
