Integrate Identity support and enhance error handling in application startup; add JWT configuration in appsettings

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,9 +4,14 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Issuer": "http://localhost:5053",
+    "Audience": "http://localhost:5053",
+    "SigningKey": "swordfish"
+  }
 }
